syntax = "proto3";

package translator;


// TranslationService handles text translation requests
service TranslationService {
  // Translate text to the specified target language
  // Source language is auto-detected by DeepL
  rpc Translate(TranslateRequest) returns (TranslateResponse);
  // Get supported target languages from DeepL
  rpc GetSupportedLanguages(GetSupportedLanguagesRequest) returns (GetSupportedLanguagesResponse);
}

message TranslateRequest {
  // Text to translate (required)
  string text = 1;
  // Target language code (e.g., "DE", "FR", "ES") (required)
  string target_language = 2;
  // User ID for history tracking (optional, empty for anonymous)
  string user_id = 3;
}

message GetSupportedLanguagesRequest {}

message GetSupportedLanguagesResponse {
  repeated Language languages = 1;
}

message Language {
  // Language code (e.g., "DE", "FR", "ES")
  string code = 1;
  // Language name (e.g., "German", "French", "Spanish")
  string name = 2;
}

message TranslateResponse {
  // Translated text
  string translated_text = 1;
  // Detected source language code (e.g., "EN")
  string detected_source_language = 2;
  // Target language code
  string target_language = 3;
}
